--- a/Kebne/Kebne/Info.plist
+++ b/Kebne/Kebne/Info.plist
@@ -55,6 +55,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Appen använder platstjänster för att se när du är i närheten av Kebnes kontor.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Appen använder platstjänster för att se när du är i närheten av Kebnes kontor.</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
