Revert "Revert "Merge branch 'master' into notifications""
This reverts commit fd38b2f26f8580f21be06e15f9b8a3012b67144f.

--- a/Kebne/Kebne/Info.plist
+++ b/Kebne/Kebne/Info.plist
@@ -55,6 +55,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Appen använder platsinfo för att se när du är i närheten av Kebnes kontor.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Appen använder platsinfo för att se när du är i närheten av Kebnes kontor.</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
