Abstracted Messaging, GIDSignIn and FirebaseApp used methods into separate protocols for each and added conformance for the mentioned classes. Updated dependent classes so that these classes are injected into them and wrote some more tests.

--- a/Kebne/Kebne/Info.plist
+++ b/Kebne/Kebne/Info.plist
@@ -53,6 +53,10 @@
 	<string>Appen använder platsinfo för att se när du är i närheten av Kebnes kontor.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Appen använder platsinfo för att se när du är i närheten av Kebnes kontor.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
